@@ -4,5 +4,5 @@ license = Perl_5
 copyright_holder = E. Xavier Ample
 
 [@DAGOLDEN]
-no_git_gather = 1
+no_git = 1
 
