@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - Add 'no_git' option to bypass git-related plugins
+
 0.039     2013-02-11 13:17:21 America/New_York
 
     - Replace buggy ReadmeFromPod with another invocation of
